Dodano funkcje statystyczne

--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPQFEOfR+ZZy3U1OJny+Uxy",
+      "authorship_tag": "ABX9TyPiPYcdWxZBM6SBFvTfKlqA",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,9 +48,9 @@
           "base_uri": "https://localhost:8080/",
           "height": 35
         },
-        "outputId": "ec53592f-1791-48f1-951c-cbdef540a067"
+        "outputId": "1a85897c-feff-4c40-fb12-1f360c730390"
       },
-      "execution_count": 47,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -63,7 +63,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 47
+          "execution_count": 2
         }
       ]
     },
@@ -436,6 +436,138 @@
             "19\n",
             "[11 12 13 14]\n",
             "[ 0  1  2  3  4  5  6  7  8 19 17 18 19]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Algebra liniowa\n",
+        "## wektory i macierze"
+      ],
+      "metadata": {
+        "id": "nP_HLkmv4htJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wektor1 = np.array([3, 1])\n",
+        "wektor2 = np.array([4, 2])\n",
+        "\n",
+        "print(np.linalg.norm(wektor1 - wektor2))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CNYuoPqQ4oBK",
+        "outputId": "138b313b-0315-4b51-d183-a00e477ef0b1"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1.4142135623730951\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "macierz1 = np.array([[3, 1], [-5, 2]])\n",
+        "macierz2 = np.array([[5], [3]])\n",
+        "\n",
+        "macierz3 = np.dot(macierz1, macierz2)\n",
+        "print(macierz3)\n",
+        "\n",
+        "wyznacznik1 = np.linalg.det(macierz1)\n",
+        "print(wyznacznik1)\n",
+        "\n",
+        "macierz_jednostkowa = np.eye(4, dtype = int)\n",
+        "print(macierz_jednostkowa)\n",
+        "\n",
+        "macierz_odwrotna = np.linalg.inv(macierz1)\n",
+        "print(macierz_odwrotna)\n",
+        "\n",
+        "macierz_transponowana = np.transpose(macierz3)\n",
+        "print(macierz_transponowana)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_rZziDsXcpoo",
+        "outputId": "08da0eda-ec67-41b5-8c15-7cc8bf9185c1"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[[ 18]\n",
+            " [-19]]\n",
+            "11.000000000000002\n",
+            "[[1 0 0 0]\n",
+            " [0 1 0 0]\n",
+            " [0 0 1 0]\n",
+            " [0 0 0 1]]\n",
+            "[[ 0.18181818 -0.09090909]\n",
+            " [ 0.45454545  0.27272727]]\n",
+            "[[ 18 -19]]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Funkcje statystyczne"
+      ],
+      "metadata": {
+        "id": "MNVwOOBje4Wn"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ceny = np.array([[12, 16, 15, 14, 2000],\n",
+        "                 [13, 18, 13, 14.3, 1230],\n",
+        "                 [11, 12, 15.6, 14.5, 2340]])\n",
+        "\n",
+        "suma = ceny.sum(axis = 1) #sumowanie po kolumnach, axis = 0, wiersze to axis = 1\n",
+        "print(suma)\n",
+        "\n",
+        "print(np.min(ceny))\n",
+        "print(np.max(ceny))\n",
+        "print(np.median(ceny))\n",
+        "print(np.std(ceny))\n",
+        "print(np.var(ceny))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "J00nVoDoe7Pv",
+        "outputId": "42a80040-0df9-46d9-9574-d00ec3a3bea9"
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "[2057.  1288.3 2393.1]\n",
+            "11.0\n",
+            "2340.0\n",
+            "14.5\n",
+            "765.7512126881245\n",
+            "586374.9197333333\n"
           ]
         }
       ]
